--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Matt <******@******.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+click = "^8.1.3"
+progress = "^1.6"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
